--- a/public_html/core/admin/view/css/main.css
+++ b/public_html/core/admin/view/css/main.css
@@ -512,6 +512,12 @@ textarea {
     height: 300px;
 }
 
+
+.img_show img {
+	min-width: 50px;
+}
+
+
 .mce-tinymce.mce-container.mce-panel, .tox-tinymce {
     width: 100%;
     max-width: 98vw;
