--- a/public_html/templates/default/assets/css/style.css
+++ b/public_html/templates/default/assets/css/style.css
@@ -7779,3 +7779,19 @@ input[type='search'], input[type='text'], input[type='email'] {
 	align-items: center; 
 	justify-content: center;  
 	}
+
+	.cart-btn-wrap [data-totalQty] {
+		width: 19px;
+		height: 19px;
+		border: 1px solid rgb(236, 163, 27);
+		background: white;
+		border-radius: 50%;
+		position: absolute;
+		right: calc(50% - 22px);
+		top: calc(50% - 22px);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 12px;
+		font-weight: 900;
+	}
