--- a/public_html/templates/default/assets/css/style.css
+++ b/public_html/templates/default/assets/css/style.css
@@ -7825,6 +7825,8 @@ input[type='search'], input[type='text'], input[type='email'] {
 		flex-basis: 600px;
 		padding: 30px 20px;
 		background: white;
+		max-height: 100vh;
+		overflow-y: auto;
 	}
 	
 	.order-popup__inner > input, .order-popup__inner > textarea {
